added xunit nuget

--- a/src/RssMixxxer.Tests/RssMixxxer.Tests.csproj
+++ b/src/RssMixxxer.Tests/RssMixxxer.Tests.csproj
@@ -39,6 +39,12 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\..\packages\xunit.1.9.0.1566\lib\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\..\packages\xunit.extensions.1.9.0.1566\lib\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Composition\composing_result_feed.cs" />
@@ -59,6 +65,9 @@
       <Project>{29FCD44D-8D9E-4737-89BD-B4FB8938DF6F}</Project>
       <Name>RssMixxxer</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
