--- a/src/RssMixxxer/RssMixxxer.csproj
+++ b/src/RssMixxxer/RssMixxxer.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog">
+      <HintPath>..\..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="Simple.Data, Version=1.0.0.2, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Simple.Data.Core.1.0.0-beta2\lib\net40\Simple.Data.dll</HintPath>
     </Reference>
