--- a/src/RssMixxxer/packages.config
+++ b/src/RssMixxxer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NLog" version="2.0.0.2000" />
   <package id="Simple.Data.Ado" version="1.0.0-beta2" />
   <package id="Simple.Data.Core" version="1.0.0-beta2" />
   <package id="Simple.Data.SqlCompact40" version="1.0.0-beta2" />
