--- a/src/RssMixxxer/RssMixxxer.csproj
+++ b/src/RssMixxxer/RssMixxxer.csproj
@@ -71,7 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="local-feeds.sdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="todo.txt" />
   </ItemGroup>
