dbprovider now opens sqlce file using connectionstring in config instead of hardcoded value

--- a/src/RssMixxxer.Tests/RssMixxxer.Tests.csproj
+++ b/src/RssMixxxer.Tests/RssMixxxer.Tests.csproj
@@ -83,6 +83,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\RssMixxxer\App.config">
+      <Link>App.config</Link>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
