--- a/src/RssMixxxer/RssMixxxer.csproj
+++ b/src/RssMixxxer/RssMixxxer.csproj
@@ -76,6 +76,7 @@
     <Content Include="todo.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
