--- a/src/RssMixxxer.Tests/packages.config
+++ b/src/RssMixxxer.Tests/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="2.5.2" />
-  <package id="FakeItEasy" version="1.7.4257.42" />
-  <package id="Simple.Data.Ado" version="1.0.0-beta2" />
-  <package id="Simple.Data.Core" version="1.0.0-beta2" />
-  <package id="Simple.Data.SqlCompact40" version="1.0.0-beta2" />
+  <package id="Castle.Core" version="2.5.2" requireReinstallation="True" />
+  <package id="FakeItEasy" version="1.7.4257.42" requireReinstallation="True" />
+  <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net45" />
+  <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net45" />
+  <package id="Simple.Data.SqlCompact40" version="0.19.0.0" targetFramework="net45" />
   <package id="xunit" version="1.9.0.1566" />
   <package id="xunit.extensions" version="1.9.0.1566" />
 </packages>
