--- a/src/RssMixxxer/App.config
+++ b/src/RssMixxxer/App.config
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <connectionStrings>
-        <add name="feed_cache" connectionString="Data Source=local-feeds.sdf" />
+        <add name="feed_cache" connectionString="Data Source=local-feeds.sdf"/>
     </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
