--- a/src/RssMixxxer/packages.config
+++ b/src/RssMixxxer/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NLog" version="2.0.0.2000" />
-  <package id="Simple.Data.Ado" version="1.0.0-beta2" />
-  <package id="Simple.Data.Core" version="1.0.0-beta2" />
-  <package id="Simple.Data.SqlCompact40" version="1.0.0-beta2" />
+  <package id="NLog" version="2.0.0.2000" requireReinstallation="True" />
+  <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net45" />
+  <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net45" />
+  <package id="Simple.Data.SqlCompact40" version="0.19.0.0" targetFramework="net45" />
 </packages>
