--- a/src/RssMixxxer/packages.config
+++ b/src/RssMixxxer/packages.config
@@ -3,4 +3,6 @@
   <package id="NLog" version="2.0.0.2000" requireReinstallation="True" />
   <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net45" />
   <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net45" />
+  <package id="Simple.Data.Sqlite" version="0.18.3.2" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.91.0" targetFramework="net45" />
 </packages>
