--- a/src/RssMixxxer.Tests/packages.config
+++ b/src/RssMixxxer.Tests/packages.config
@@ -4,6 +4,8 @@
   <package id="FakeItEasy" version="1.7.4257.42" requireReinstallation="True" />
   <package id="Simple.Data.Ado" version="0.19.0.0" targetFramework="net45" />
   <package id="Simple.Data.Core" version="0.19.0.0" targetFramework="net45" />
+  <package id="Simple.Data.Sqlite" version="0.18.3.2" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.91.0" targetFramework="net45" />
   <package id="xunit" version="1.9.0.1566" />
   <package id="xunit.extensions" version="1.9.0.1566" />
 </packages>
